[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
requests = "^2.28.0"
pandas = "^1.5.3"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "pubmed_paper_fetcher"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:app"
